--- a/backend/Infrastructure/Basket.Infrastructure/Basket.Infrastructure.csproj
+++ b/backend/Infrastructure/Basket.Infrastructure/Basket.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Bookstore.Domain\Bookstore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
