--- a/backend/Application/Basket/Basket.csproj
+++ b/backend/Application/Basket/Basket.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,10 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Queries\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\Bookstore.Api.Enum\Bookstore.Api.Enum.csproj" />
     <ProjectReference Include="..\..\Domain\Bookstore.Domain\Bookstore.Domain.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Basket.Infrastructure\Basket.Infrastructure.csproj" />
   </ItemGroup>
