--- a/backend/Infrastructure/Basket.Infrastructure/Basket.Infrastructure.csproj
+++ b/backend/Infrastructure/Basket.Infrastructure/Basket.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,9 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.86" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Bookstore.Api.Helper\Bookstore.Api.Helper.csproj" />
     <ProjectReference Include="..\..\Domain\Bookstore.Domain\Bookstore.Domain.csproj" />
   </ItemGroup>
 
