--- a/backend/Application/Book/Book.csproj
+++ b/backend/Application/Book/Book.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Bookstore.Domain\Bookstore.Domain.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Book.Infrastructure\Book.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
