update and chnage name api

--- a/backend/Bookstore.Test/Bookstore.Test.csproj
+++ b/backend/Bookstore.Test/Bookstore.Test.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Basket\Basket.csproj" />
+    <ProjectReference Include="..\Application\Basket\Basket.API.csproj" />
     <ProjectReference Include="..\Domain\Bookstore.Domain\Bookstore.Domain.csproj" />
   </ItemGroup>
 
