--- a/backend/Application/Order.API/appsettings.json
+++ b/backend/Application/Order.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderContext": "Host=localhost;Database=bookstore;Username=admin;Password=abcd1234"
+  }
 }
