--- a/backend/dockerfile.basket
+++ b/backend/dockerfile.basket
@@ -23,4 +23,5 @@ RUN dotnet publish "Basket.API.csproj" -c Release -o /app/publish /p:UseAppHost=
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:8081
 ENTRYPOINT ["dotnet", "Basket.API.dll"]
