--- a/backend/dockerfile.book
+++ b/backend/dockerfile.book
@@ -22,4 +22,5 @@ RUN dotnet publish "Book.API.csproj" -c Release -o /app/publish /p:UseAppHost=fa
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:8080
 ENTRYPOINT ["dotnet", "Book.API.dll"]
