--- a/backend/dockerfile.order
+++ b/backend/dockerfile.order
@@ -23,4 +23,5 @@ RUN dotnet publish "Order.API.csproj" -c Release -o /app/publish /p:UseAppHost=f
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:8082
 ENTRYPOINT ["dotnet", "Order.API.dll"]
