--- a/backend/Application/Basket.API/appsettings.json
+++ b/backend/Application/Basket.API/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "localhost:6370"
-  }
+  },
+  "elasticesearch_url": "http://localhost:9200",
+  "app_name": "basket.api"
 }
