--- a/backend/Application/Book.API/appsettings.json
+++ b/backend/Application/Book.API/appsettings.json
@@ -10,5 +10,7 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "BookStore",
     "BooksCollectionName": "Books"
-  }
+  },
+  "elasticesearch_url": "http://localhost:9200",
+  "app_name": "book.api"
 }
