--- a/backend/Application/Customer.API/appsettings.json
+++ b/backend/Application/Customer.API/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CustomerContext": "Host=localhost;Database=bookstore;Username=admin;Password=abcd1234"
-  }
+  },
+  "elasticesearch_url": "http://localhost:9200",
+  "app_name": "customer.api"
 }
