--- a/backend/Application/Order.API/Order.API.csproj
+++ b/backend/Application/Order.API/Order.API.csproj
@@ -12,7 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\Logging.Infrastructure\Logging.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Order.Infrastructure\Order.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Middleware\Middleware.csproj" />
   </ItemGroup>
 
 </Project>
