--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,63 +24,63 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=abcd1234
 
-  kong-database:
-    image: postgres:13
-    container_name: kong-database
-    networks:
-      - bookstore-net
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: kong
-      POSTGRES_DB: kong
-      POSTGRES_PASSWORD: abcd1234
+  # kong-database:
+  #   image: postgres:13
+  #   container_name: kong-database
+  #   networks:
+  #     - bookstore-net
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     POSTGRES_USER: kong
+  #     POSTGRES_DB: kong
+  #     POSTGRES_PASSWORD: abcd1234
 
-  kong-migrations:
-    image: kong/kong-gateway:3.1.1.3
-    platform: ${TARGETPLATFORM:-linux/amd64}
-    command: "kong migrations bootstrap"
-    container_name: kong-migrations
-    networks:
-      - bookstore-net
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_PASSWORD: abcd1234
-      KONG_PASSWORD: test
-    depends_on:
-      - kong-database
+  # kong-migrations:
+  #   image: kong/kong-gateway:3.1.1.3
+  #   platform: ${TARGETPLATFORM:-linux/amd64}
+  #   command: "kong migrations bootstrap"
+  #   container_name: kong-migrations
+  #   networks:
+  #     - bookstore-net
+  #   environment:
+  #     KONG_DATABASE: postgres
+  #     KONG_PG_HOST: kong-database
+  #     KONG_PG_PASSWORD: abcd1234
+  #     KONG_PASSWORD: test
+  #   depends_on:
+  #     - kong-database
 
-  kong-gateway:
-    image: kong/kong-gateway:3.1.1.3
-    platform: ${TARGETPLATFORM:-linux/amd64}
-    container_name: kong-gateway
-    networks:
-      - bookstore-net
-    ports:
-      - "8000:8000"
-      - "8443:8443"
-      - "8001:8001"
-      - "8444:8444"
-      - "8002:8002"
-      - "8445:8445"
-      - "8003:8003"
-      - "8004:8004"
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: abcd1234
-      KONG_PROXY_ACCESS_LOG: /dev/stdout
-      KONG_ADMIN_ACCESS_LOG: /dev/stdout
-      KONG_PROXY_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001
-      KONG_ADMIN_GUI_URL: http://localhost:9000
-      KONG_LICENSE_DATA:
-    depends_on:
-      - kong-database
-      - kong-migrations
+  # kong-gateway:
+  #   image: kong/kong-gateway:3.1.1.3
+  #   platform: ${TARGETPLATFORM:-linux/amd64}
+  #   container_name: kong-gateway
+  #   networks:
+  #     - bookstore-net
+  #   ports:
+  #     - "8000:8000"
+  #     - "8443:8443"
+  #     - "8001:8001"
+  #     - "8444:8444"
+  #     - "8002:8002"
+  #     - "8445:8445"
+  #     - "8003:8003"
+  #     - "8004:8004"
+  #   environment:
+  #     KONG_DATABASE: postgres
+  #     KONG_PG_HOST: kong-database
+  #     KONG_PG_USER: kong
+  #     KONG_PG_PASSWORD: abcd1234
+  #     KONG_PROXY_ACCESS_LOG: /dev/stdout
+  #     KONG_ADMIN_ACCESS_LOG: /dev/stdout
+  #     KONG_PROXY_ERROR_LOG: /dev/stderr
+  #     KONG_ADMIN_ERROR_LOG: /dev/stderr
+  #     KONG_ADMIN_LISTEN: 0.0.0.0:8001
+  #     KONG_ADMIN_GUI_URL: http://localhost:9000
+  #     KONG_LICENSE_DATA:
+  #   depends_on:
+  #     - kong-database
+  #     - kong-migrations
 
   elasticsearch:
     container_name: es-container
@@ -111,6 +111,7 @@ services:
     restart: always
     image: ${DOCKER_REGISTRY-}book.api
     depends_on:
+      - elasticsearch
       - mongo-db
     build:
       context: backend
@@ -126,6 +127,7 @@ services:
     restart: always
     image: ${DOCKER_REGISTRY-}basket.api
     depends_on:
+      - elasticsearch
       - redis-db
     build:
       context: backend
@@ -141,6 +143,7 @@ services:
     restart: always
     image: ${DOCKER_REGISTRY-}order.api
     depends_on:
+      - elasticsearch
       - pg-db
     build:
       context: backend
